--- a/rating_stars/rating_star.html
+++ b/rating_stars/rating_star.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>RATING STARS</h1>
+    </header>
     <div class="stars-wrapper">  
         <td class="rating-star">  
             <div class="star-rating">  
